--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,20 @@
-<h1>RSS TV</h1>
-<div id="title"></div>
-<div id="summary"></div>
+<div class="container">
+
+  <div class="content">
+    <div id="title"></div>
+    <div id="summary"></div>
+  </div>
+
+</div>
 
 <%= content_for :after_js do %>
   <script>
     var news;
     $(document).ready(function(){
+      update_feed();
+    })
 
+    function update_feed(){
       $.ajax({
         // ajax call
         type: 'GET',
@@ -25,11 +33,11 @@
         }
 
       })
-    })
+    }
 
     function display(news){
       var count = Object.keys(news).length;
-      for (var i=0;i<=count;i++) {
+      for (var i=0;i<=count - 1;i++) {
        (function(ind) {
          setTimeout(function(){
           $('#title').html(news[ind].title);
@@ -37,6 +45,7 @@
          }, 8000 * ind);
        })(i);
       }
+      setTimeout(function(){update_feed();}, 8000 * count);
     }
 
   </script>
