--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,6 +8,9 @@
 body{
   background-color: black;
   color: white;
+  position: relative;
+  min-height: 100%;
+  height: 100%;
 }
 
 #title{
@@ -34,6 +37,56 @@ body{
   height: 80vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+}
+
+.footer{
+  background-color: black;
+  z-index: 10;
+  height: 20vh;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  border-top: 1px solid rgba(249, 167, 12, 0.7);
+  display: flex;
+  justify-content: space-between;
+}
+
+.quote_wrapper{
+  height: 100%;
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20px;
+
+  .symbol{
+    color: #F9A70C;
+    font-size: 2.4em;
+    font-family: 'Oswald', sans-serif;
+    padding-right: 10px;
+  }
+
+  .quote{
+    color: white;
+    font-size: 2.4em;
+    font-family: 'Oswald', sans-serif;
+    padding-right: 10px;
+  }
+
+  .change{
+    font-size: 2.4em;
+    font-family: 'Oswald', sans-serif;
+  }
+
+}
+
+.change_positive{
+  color: green;
+}
+
+.change_negative{
+  color: red;
 }
