--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="logo">
-    <%= image_tag "maxima.jpg", height:"80" %>
+    <%= image_tag "maxima.png", height:"80" %>
   </div>
 
   <div class="content">
