--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,6 +13,12 @@ body{
   height: 100%;
 }
 
+.data{
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 200;
+}
+
 .logo{
   position: absolute;
   top: 15px;
@@ -23,6 +29,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 }
 
 img{
