--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,28 +15,27 @@
 
       <div class="bbce-wrapper">
         <h2>SE con Ago/17:</h2>
-        <div id="ago" class="preco"></div>
-        <div id="data_ago" class="data"></div>
+        <div id="pos1" class="preco"></div>
+        <div id="data_pos1" class="data"></div>
       </div>
 
       <div class="bbce-wrapper">
         <h2>SE con Set/17:</h2>
-        <div id="set" class="preco"></div>
-        <div id="data_set" class="data"></div>
+        <div id="pos2" class="preco"></div>
+        <div id="data_pos2" class="data"></div>
       </div>
 
       <div class="bbce-wrapper">
         <h2>SE con Out/17:</h2>
-        <div id="out" class="preco"></div>
-        <div id="data_out" class="data"></div>
+        <div id="pos3" class="preco"></div>
+        <div id="data_pos3" class="data"></div>
       </div>
 
       <div class="bbce-wrapper">
-        <h2>SE con Nov/17:</h2>
-        <div id="nov" class="preco"></div>
-        <div id="data_nov" class="data"></div>
+        <h2>SE con Out/17 a Dez/17</h2>
+        <div id="pos4" class="preco"></div>
+        <div id="data_pos4" class="data"></div>
       </div>
-
 
     </div>
     <%= render 'footer' %>
@@ -227,24 +226,22 @@
 
     function display_bbce(bbce){
 
-      ago_last_trade = JSON.parse(bbce[0])[0];
-      set_last_trade = JSON.parse(bbce[1])[0];
-      out_last_trade = JSON.parse(bbce[2])[0];
-      nov_last_trade = JSON.parse(bbce[3])[0];
-
-      // nov_last_trade.dataHora.substring(8, 10) + "/" + nov_last_trade.dataHora.substring(5, 7)
-
-      $('#ago').html("R$ " + ago_last_trade.preco.toFixed(2));
-      $('#set').html("R$ " + set_last_trade.preco.toFixed(2));
-      $('#out').html("R$ " + out_last_trade.preco.toFixed(2));
-      $('#nov').html("R$ " + nov_last_trade.preco.toFixed(2));
+      pos1_last_trade = JSON.parse(bbce[0])[0];
+      pos2_last_trade = JSON.parse(bbce[1])[0];
+      pos3_last_trade = JSON.parse(bbce[2])[0];
+      pos4_last_trade = JSON.parse(bbce[3])[0];
 
 
+      $('#pos1').html("R$ " + pos1_last_trade.preco.toFixed(2));
+      $('#pos2').html("R$ " + pos2_last_trade.preco.toFixed(2));
+      $('#pos3').html("R$ " + pos3_last_trade.preco.toFixed(2));
+      $('#pos4').html("R$ " + pos4_last_trade.preco.toFixed(2));
 
-      $('#data_ago').html(ago_last_trade.dataHora.substring(8, 10) + "/" + ago_last_trade.dataHora.substring(5, 7) + " " +  ago_last_trade.dataHora.substring(11, 16));
-      $('#data_set').html(set_last_trade.dataHora.substring(8, 10) + "/" + set_last_trade.dataHora.substring(5, 7) + " " +  set_last_trade.dataHora.substring(11, 16));
-      $('#data_out').html(out_last_trade.dataHora.substring(8, 10) + "/" + out_last_trade.dataHora.substring(5, 7) + " " +  out_last_trade.dataHora.substring(11, 16));
-      $('#data_nov').html(nov_last_trade.dataHora.substring(8, 10) + "/" + nov_last_trade.dataHora.substring(5, 7) + " " +  nov_last_trade.dataHora.substring(11, 16));
+
+      $('#data_pos1').html(pos1_last_trade.dataHora.substring(8, 10) + "/" + pos1_last_trade.dataHora.substring(5, 7) + " " +  pos1_last_trade.dataHora.substring(11, 16));
+      $('#data_pos2').html(pos2_last_trade.dataHora.substring(8, 10) + "/" + pos2_last_trade.dataHora.substring(5, 7) + " " +  pos2_last_trade.dataHora.substring(11, 16));
+      $('#data_pos3').html(pos3_last_trade.dataHora.substring(8, 10) + "/" + pos3_last_trade.dataHora.substring(5, 7) + " " +  pos3_last_trade.dataHora.substring(11, 16));
+      $('#data_pos4').html(pos4_last_trade.dataHora.substring(8, 10) + "/" + pos4_last_trade.dataHora.substring(5, 7) + " " +  pos4_last_trade.dataHora.substring(11, 16));
 
       setTimeout(function(){update_bbce_feed();}, 20000);
 
