--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,19 +14,19 @@
     <div class="quotes">
 
       <div class="bbce-wrapper">
-        <h2>SE con Ago/17:</h2>
+        <h2>SE con Out/17:</h2>
         <div id="pos1" class="preco"></div>
         <div id="data_pos1" class="data"></div>
       </div>
 
       <div class="bbce-wrapper">
-        <h2>SE con Set/17:</h2>
+        <h2>SE con Nov/17:</h2>
         <div id="pos2" class="preco"></div>
         <div id="data_pos2" class="data"></div>
       </div>
 
       <div class="bbce-wrapper">
-        <h2>SE con Out/17:</h2>
+        <h2>SE con Dez/17:</h2>
         <div id="pos3" class="preco"></div>
         <div id="data_pos3" class="data"></div>
       </div>
